lisattiin bibtex-nappi ilman toimninnallisuutta

--- a/miniprojekti/src/main/java/GUI/MainWindow.form
+++ b/miniprojekti/src/main/java/GUI/MainWindow.form
@@ -62,9 +62,11 @@
                       <EmptySpace pref="50" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jButton4" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                              <Component id="bibtex" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="muokkaa" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="poista" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" min="-2" pref="380" max="-2" attributes="0"/>
                       </Group>
@@ -79,8 +81,9 @@
                       <Component id="jScrollPane1" pref="410" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="poista" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="muokkaa" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="bibtex" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -104,18 +107,26 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="jButton3">
+            <Component class="javax.swing.JButton" name="poista">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Poista"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="poistaActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton4">
+            <Component class="javax.swing.JButton" name="muokkaa">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Muokkaa"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="bibtex">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Luo BibTeX-tiedosto"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bibtexActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
