--- a/miniprojekti/src/main/java/GUI/MainWindow.form
+++ b/miniprojekti/src/main/java/GUI/MainWindow.form
@@ -119,6 +119,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Muokkaa"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="muokkaaActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bibtex">
               <Properties>
