--- a/miniprojekti/src/main/java/GUI/MainWindow.form
+++ b/miniprojekti/src/main/java/GUI/MainWindow.form
@@ -176,6 +176,9 @@
                   </StringArray>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tagitActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
